[package]
name = "spark-transport-tcp"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[lib]
bench = false

[dependencies]
spark-core = { path = "../../spark-core" }
thiserror = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }

[features]
default = []
# 针对批量 UDP，暴露一个可选的 socket2 依赖；后续实现会在 Unix 系统下启用。
batch-udp-unix = ["socket2"]

[dependencies.socket2]
version = "0.5"
optional = true
