[package]
name = "spark-transport-tcp"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"

[lib]
# TCP 传输 crate 以单元测试验证协议行为，禁用基准运行以避免 `--quick`
# 交给 `libtest` 造成参数解析失败。
bench = false

[dependencies]
spark-core = { workspace = true, features = ["std"] }
spark-transport = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"], optional = true }
bytes.workspace = true
tracing.workspace = true

[features]
default = ["runtime-tokio"]
# Tokio 实现层入口：默认启用，关闭默认特性时可显式禁用以减少依赖。
runtime-tokio = ["dep:tokio", "dep:socket2"]
# TCP 半关闭实现依赖 socket2；保留 batch-udp-unix 特性以便复用该依赖。
batch-udp-unix = ["runtime-tokio", "dep:socket2"]

[dependencies.socket2]
workspace = true
optional = true
