[package]
name = "spark-transport-tls"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[dependencies]
spark-core = { path = "../../spark-core" }
thiserror = "1.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util"] }
rustls = "0.23"
tokio-rustls = "0.26"
arc-swap = "1.7"

[features]
default = []
batch-udp-unix = ["socket2"]

[dependencies.socket2]
version = "0.5"
optional = true
