[package]
name = "spark-transport-tls"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"

[lib]
# TLS 传输同样暂无基准测试目标，为避免 `cargo bench -- --quick` 传递
# 非法参数至 `libtest`，直接关闭基准运行。
bench = false

[dependencies]
spark-core = { workspace = true, features = ["std"] }
spark-transport-tcp = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"], optional = true }
rustls = { workspace = true, default-features = false, features = ["std"], optional = true }
tokio-rustls = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }
thiserror = { workspace = true }
bytes.workspace = true

[features]
default = ["runtime-tokio"]
runtime-tokio = [
    "dep:tokio",
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:arc-swap",
    "spark-transport-tcp/runtime-tokio",
]
batch-udp-unix = ["runtime-tokio", "dep:socket2"]

[dependencies.socket2]
workspace = true
optional = true
