[package]
name = "tck-mock-transport"
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"
description = "演示项目：如何在第三方传输层实现中集成 spark-contract-tests TCK"

[lib]
# 教案级说明：示例 crate 仅暴露辅助函数供集成测试复用，不提供基准测试入口。
# 若保留 bench 默认开启状态，`cargo bench -- --quick` 会向 libtest 注入 `--quick`
# 等未知参数导致 Clap 解析失败。显式关闭 bench 回调可保持示例测试链路稳定。
bench = false

[dependencies]
spark-core = { workspace = true }

[dev-dependencies]
spark-contract-tests = { workspace = true }
