[package]
name = "spark-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
spark-core = { path = "../../spark-core", features = ["std"] }

[[bin]]
name = "codec_limits"
path = "fuzz_targets/codec_limits.rs"
test = false
doc = false
