[package]
name = "spark-codec-rtcp"
version = "0.1.0"
rust-version = "1.89"
edition = "2024"
authors = ["Gemini 架构组 <architecture@gemini.example>"]
license = "Apache-2.0"
description = "Real-time Transport Control Protocol codec scaffolding for spark-core"
publish = false

[lib]
bench = false

[features]
default = ["std"]
alloc = ["spark-core/alloc"]
std = ["alloc", "spark-core/std"]
compat_v0 = ["spark-core/compat_v0"]

[dependencies]
spark-core = { workspace = true, default-features = false }
smallvec = { version = "1.13", default-features = false, features = ["const_generics", "union"] }

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
